# ctxlint

./: .gitignore  LEARNING.md  cabal.project  ctxlint.cabal  hie.yaml  project-memo.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json  project-config.ts
app/: Main.hs
learning/: Main.hs  sandbox.cabal
learning/Basics/: README.md  Syntax.hs  TypeClasses.hs
learning/Basics/01-syntax/: README.md
learning/Basics/02-functions/: README.md
learning/Basics/03-typeclasses/: README.md
learning/app/: Main.hs
learning/basics/: Functions.hs  Syntax.hs  TypeClasses.hs
learning/practice/: Parsing.hs  Validation.hs
learning/records/: INDEX.md
learning/records/chronicle/: 2026-01-18-01.md  2026-01-18_01-syntax.md  README.md  TEMPLATE.md
learning/records/topics/: README.md
learning/references/: links.md  notes.md  patterns.md
src/Ctxlint/: Parser.hs  Types.hs  Validator.hs
test/: Main.hs
