cabal-version:       3.0
name:                 sandbox
version:              0.1.0.0
synopsis:             Learning sandbox for Haskell basics
license:              MIT
author:               ctxlint learner
build-type:           Simple

library
  exposed-modules:
    Basics.Syntax
    Basics.Functions
    Basics.TypeClasses
    Practice.Parsing
    Practice.Validation
  build-depends:
    base >=4.16 && <5,
    text,
    parsec
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat

executable sandbox-exe
  main-is:             Main.hs
  build-depends:
    base >=4.16 && <5,
    sandbox
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
